# Ld

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MASTERPLAN.md  Makefile  PLAN.md  README.md  ROADMAP.md  docker-compose.yml  opencode.json  pyproject.toml  render.yaml  run.sh
.claude/: settings.json
.github/workflows/: ci.yml
app/: __init__.py  agents.py  boolexpr.py  catalog.py  compile_frame.py  compile_gate.py  config.py  cosim.py  design.py  design_rag.py  error_codes.py  error_kb.py  explain.py  gen.py  generate.py  graph.py  intent.py  korean.py  memory_map.py  models.py  nlmatch.py  plant.py  project.py  prompts.py  rag.py  repair.py  safety.py  server.py  simulator.py  stepseq.py  synth.py  transpiler.py  verifier.py  wizard.py
app/bench/: __init__.py  design_accuracy.py  nl_accuracy.py
app/comms/: __init__.py  fenet_xgt.py  melsec.py  modbus_tcp.py  protocols.py  safety_kernel.py
app/dataset/: __init__.py  bootstrap.py
app/emit/: __init__.py  ladder_il.py
app/export/: __init__.py  plcopen.py
app/patterns/: __init__.py  library.py
app/twin/: __init__.py  openplc_adapter.py
app/vendors/: __init__.py  profiles.py
app/xgk/: __init__.py  interpreter.py
benchmarks/: compile_adversarial.jsonl  compile_corpus.jsonl  nl_bench_corpus.py  real_world_ko.jsonl
data/: instructions.jsonl
data/bootstrap/: dataset.json
desktop/: README.md  backend_entry.py  plc-backend.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: BRIEF_EN.md  CAPABILITY.md  DEMO.md  DEPLOY.md  ERRORCODES.md  FRONTEND_INTEGRATION.md  INVESTOR.md  KOREAN_NL_SPEC.md  LS_MITSUBISHI_PROTOCOL_BRIEF.md  MANUAL.md  MASTER_PROMPT.md  OPENPLC_LIVE.md  OPENPLC_STRATEGY.md  SAFETY.md  SCALE_ROADMAP.md  STAGE3_COMMS_BRIEF.md  WHITEPAPER.md  demo.html  opencode-분석.md  web.html
docs/demo/: index.html  twin3d.js
docs/research/: design-direction.md  engine-redesign-plan.md  ladder-knowledge-base.md  real-world-ladder-practices.md
frontend/: app.js  blueprint.js  demo-data.js  generate.html  index.html  investor-demo.html  ladder-render.js  live.html  panel.js  plant3d.js  precision.js  sim-engine.js  studio.html  studio.js  twin-engine.js  twin3d-poc.html  twin3d.js  wizard.html
openplc_driver/: CMakeLists.txt  README.md  fenet_hal.cpp  fenet_hal.h  melsec_hal.cpp  melsec_hal.h  plugins.conf.example
scripts/: analog_sim_bench.py  build_demo.py  build_desktop.sh  build_errorcodes_doc.py  capability_report.py  compile_adversarial_bench.py  compile_bench.py  consensus_bench.py  cross_backend_bench.py  demo_e2e.py  e2e_smoke.mjs  eval.py  fenet_pcap_verify.py  gen_demo_data.py  generativity_bench.py  generativity_v2_bench.py  intent_ablation.py  intent_bench_full.py  js_smoke.js  ladder_render_runner.mjs  openplc_live_diff.py  proof_coverage.py  repair_bench.py  run_mutation.py  run_nl_bench.py  run_realworld_bench.py  sequencer_safety_bench.py  setup.sh  sim_parity_runner.mjs  soundness_study.py  targeted_mutation.py
tests/: conftest.py  test_agents.py  test_analog_compare.py  test_analog_recipe.py  test_analog_sim.py  test_boolexpr.py  test_build_demo.py  test_capability_report.py  test_catalog.py  test_cluster_tool.py  test_comms_contract.py  test_comparators.py  test_compile_adversarial.py  test_compile_api.py  test_compile_bench.py  test_compile_frame.py  test_compile_gate.py  test_config.py  test_consensus_bench.py  test_corpus_mutation_guard.py  test_cosim.py  test_cross_backend.py  test_dataset_bootstrap.py  test_demo_e2e.py  test_deploy_smoke.py  test_design.py  test_design_bench.py  test_design_rag.py  test_docs_claims.py  test_emit.py  test_emit_compare.py  test_error_codes.py  test_error_kb.py  test_eval.py  test_explain.py  test_export.py  test_export_plcopen.py  test_export_roundtrip.py  test_fenet_conformance.py  test_fenet_xgt.py  (+60 more)
tests/fixtures/golden/: 01_conveyor_fwd_rev.json  02_motor_self_hold.json  03_traffic_light_seq.json  04_elevator_up_down.json  05_auto_door.json  06_pump_level_sensor.json  07_estop_dominant.json  08_star_delta_timer.json  09_mixing_valve.json  10_conveyor_speed.json  11_latch_alarm.json  12_fan_cooling.json  13_motor_jog_run.json  14_hi_lo_level.json  15_duty_standby_pump.json  16_conveyor_size_sort.json  17_two_hand_safety.json  18_first_out_alarm.json  19_mode_auto_manual.json  20_garage_door.json  21_part_counter.json
training/: README.md  export_dataset.py  train_lora.py
