[project]
name = "plc-ladder-agent"
version = "0.1.0"
description = "PLC ladder conversion multi-agent backend (NL -> SFC -> IEC 61131-3 ST -> formal verify -> ladder JSON)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0",
  "z3-solver>=4.13",
]

[project.scripts]
plc-gen = "app.gen:main"

[project.optional-dependencies]
# 웹 서버(라이브 미리보기) — LLM 없이 결정론 경로만 (맥에서 가볍게 실행)
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
# LLM/오케스트레이션 레이어 (Phase D 이후 필요)
llm = [
  "langgraph>=0.2,<0.4",
  "langchain-anthropic>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10", "httpx>=0.27"]
rag = ["faiss-cpu>=1.8", "langchain-community>=0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["live: requires real ANTHROPIC_API_KEY (skipped by default)"]
