[package]
name = "plc-ladder-desktop"
version = "0.1.0"
description = "PLC 래더 라이브 에디터 데스크톱 앱"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
